# cpp_practice

./: .gitignore
task_1/: CMakeLists.txt  main.cpp
